[gd_scene load_steps=45 format=2]

[ext_resource path="res://src/game/entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/player/red_hood_sheet(1).png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/player/arrow_attack.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/game/entities/player/states/DamageState.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/player/PlayerProjectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/items/pngwing.com(1).png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/player/GRASS - Pre Jump 6.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/player/atk_sword.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/player/GRASS - Post Jump 6.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/player/GRASS - Walk 4.wav" type="AudioStream" id=11]
[ext_resource path="res://src/game/entities/player/PlayerStateMachine.gd" type="Script" id=12]
[ext_resource path="res://src/game/entities/player/states/WalkState.gd" type="Script" id=13]
[ext_resource path="res://src/game/entities/player/states/IdleState.gd" type="Script" id=14]
[ext_resource path="res://src/game/entities/player/states/DeadState.gd" type="Script" id=15]
[ext_resource path="res://src/game/entities/player/states/JumpState.gd" type="Script" id=16]
[ext_resource path="res://src/game/entities/player/states/SwordState.gd" type="Script" id=17]
[ext_resource path="res://src/game/entities/player/states/ArrowState.gd" type="Script" id=18]
[ext_resource path="res://assets/textures/player/red_hood_sheet3.png" type="Texture" id=19]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/CutArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "arrow"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PlayerSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=14]
resource_name = "arrowJump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PlayerSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=12]
resource_name = "axe"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.056, 0.1, 0.168, 0.224, 0.28, 0.336, 0.392, 0.448, 0.504, 0.56, 0.616 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92, 93, 94, 95, 96, 98, 99, 100, 101, 102 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/CutArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PlayerSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.4 )
}

[sub_resource type="Animation" id=25]
resource_name = "axeJump"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("PlayerSfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/CutArea2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=19]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 121, 122 ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 120, 121, 122, 123, 124, 125, 126, 127 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PlayerSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0.8 )
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.2
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 51 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 36, 37, 38 ]
}

[sub_resource type="Animation" id=21]
resource_name = "protection"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/CutArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04617, 0.09234, 0.13851, 0.18468, 0.23085, 0.27702, 0.32319, 0.36936, 0.41553, 0.4617, 0.50787, 0.55404, 0.60021, 0.64638, 0.69255, 0.73872, 0.78489, 0.83106, 0.87723, 0.9234, 0.96957 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_walk_audio"
}, {
"args": [  ],
"method": "_walk_audio"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "_shader_hojas"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "whitoutArrow"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=27]
resource_name = "whitoutArrowJump"
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 57, 58 ]
}

[sub_resource type="CapsuleShape2D" id=1]
height = 28.0

[sub_resource type="ParticlesMaterial" id=35]
lifetime_randomness = 0.35
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( -90, 0, 0 )
initial_velocity = 5.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color = Color( 1, 0, 0, 0.92549 )
anim_speed = 1.0

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 542.89, 274.289, 44.1055, 44.8793 )

[sub_resource type="Shader" id=30]
code = "shader_type canvas_item;

/*
Made with a whole lot of nightmare fuel.
Logic's Under Pressure and Bobby Tarantino II Albums was in rotation during
the making process.
Hope you enjoy!

You're auto-friended to me if you're a Logic fan
RattPack all day!
*/

//image mipmap level, for base upscaling
const int ML = 0;

//equality threshold of 2 colors before forming lines
uniform float THRESHOLD = 0.1;

//anti aliasing scaling, smaller value make lines more blurry
uniform float AA_SCALE = 10.0;

//draw diagonal line connecting 2 pixels if within threshold
bool diag(inout vec4 sum, vec2 uv, vec2 p1, vec2 p2, sampler2D iChannel0, float LINE_THICKNESS) {
    vec4 v1 = texelFetch(iChannel0,ivec2(uv+vec2(p1.x,p1.y)),ML),
        v2 = texelFetch(iChannel0,ivec2(uv+vec2(p2.x,p2.y)),ML);
    if (length(v1-v2) < THRESHOLD) {
    	vec2 dir = p2-p1,
            lp = uv-(floor(uv+p1)+.5);
    	dir = normalize(vec2(dir.y,-dir.x));
        float l = clamp((LINE_THICKNESS-dot(lp,dir))*AA_SCALE,0.,1.);
        sum = mix(sum,v1,l);
    	return true;
    }
    return false;
}

void fragment(){
	//line thickness
	float LINE_THICKNESS;
	vec2 ip = UV * (1. / TEXTURE_PIXEL_SIZE);
	
	
		//start with nearest pixel as 'background'
		vec4 s = texelFetch(TEXTURE,ivec2(int(ip.x),int(ip.y)),ML);
		
		//draw anti aliased diagonal lines of surrounding pixels as 'foreground'
		LINE_THICKNESS = 0.4;
		if (diag(s,ip,vec2(-1,0),vec2(0,1), TEXTURE, LINE_THICKNESS)) {
			LINE_THICKNESS = 0.3;
			diag(s,ip,vec2(-1,0),vec2(1,1), TEXTURE, LINE_THICKNESS);
			diag(s,ip,vec2(-1,-1),vec2(0,1), TEXTURE, LINE_THICKNESS);
		}
		LINE_THICKNESS = 0.4;
		if (diag(s,ip,vec2(0,1),vec2(1,0), TEXTURE, LINE_THICKNESS)) {
			LINE_THICKNESS = 0.3;
			diag(s,ip,vec2(0,1),vec2(1,-1), TEXTURE, LINE_THICKNESS);
			diag(s,ip,vec2(-1,1),vec2(1,0), TEXTURE, LINE_THICKNESS);
		}
		LINE_THICKNESS = 0.4;
		if (diag(s,ip,vec2(1,0),vec2(0,-1), TEXTURE, LINE_THICKNESS)) {
			LINE_THICKNESS = 0.3;
			diag(s,ip,vec2(1,0),vec2(-1,-1), TEXTURE, LINE_THICKNESS);
			diag(s,ip,vec2(1,1),vec2(0,-1), TEXTURE, LINE_THICKNESS);
		}
		LINE_THICKNESS = 0.4;
		if (diag(s,ip,vec2(0,-1),vec2(-1,0), TEXTURE, LINE_THICKNESS)) {
			LINE_THICKNESS = 0.3;
			diag(s,ip,vec2(0,-1),vec2(-1,1), TEXTURE, LINE_THICKNESS);
			diag(s,ip,vec2(1,-1),vec2(-1,0), TEXTURE, LINE_THICKNESS);
		}
		
		COLOR = s;
}"

[sub_resource type="ShaderMaterial" id=31]
shader = SubResource( 30 )
shader_param/THRESHOLD = 0.1
shader_param/AA_SCALE = 10.0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 11.375, 18 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 9.5, 16 )

[sub_resource type="CircleShape2D" id=22]
radius = 35.0143

[sub_resource type="Shader" id=34]
code = "shader_type canvas_item;
uniform vec4 Color_Shield : hint_color;
uniform float Step;
uniform vec3 Speed;
uniform sampler2D Texture;
uniform float Size_Inner;
uniform float Opaticy;
uniform float Size_Outer;


// SphericalUV

vec2 sphericalFunc(vec2 _uv_shprc1, vec2 _p0s_shprc1, vec2 _rad_shprc1, vec2 _sp1n_shprc1, vec2 _l0c_p0s_shprc1){
	vec2 _temp_p = (_uv_shprc1 - _p0s_shprc1) * 2.0;
	float _temp_rad = length((_temp_p - _l0c_p0s_shprc1) * _rad_shprc1) + 0.0001;
	float _temp_f = (1.0 - sqrt(1.0 - _temp_rad)) / _temp_rad;
	return mod(vec2((_temp_p.x * 0.5 * _temp_f + _sp1n_shprc1.x) + 0.5,
					(_temp_p.y * 0.5 * _temp_f + _sp1n_shprc1.y) + 0.5), vec2(1.0));
}

// TilingAndOffsetUVAnimated

vec2 tilingNoffsetAnimatedFunc(vec2 _uv_tN0A, float _t1me_tN0A, vec2 _offset_tN0A){
	return vec2(mod((_uv_tN0A.x + _offset_tN0A.x * _t1me_tN0A), .0), mod((_uv_tN0A.y + _offset_tN0A.y * _t1me_tN0A), 1.0));
}


void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:8
	vec3 n_out8p0 = Color_Shield.rgb;
	float n_out8p1 = Color_Shield.a;

// ScalarUniform:49
	float n_out49p0 = Step;

// SphericalUV:40
	vec3 n_in40p1 = vec3(1.00000, 1.00000, 0.00000);
	vec3 n_in40p2 = vec3(0.00000, 0.00000, 0.00000);
	vec3 n_in40p3 = vec3(0.50000, 0.50000, 0.00000);
	vec3 n_in40p4 = vec3(0.00000, 0.00000, 0.00000);
	vec3 n_out40p0;
	{
		n_out40p0.xy = sphericalFunc(UV.xy, n_in40p3.xy, n_in40p1.xy, n_in40p2.xy, n_in40p4.xy);
	}

// VectorUniform:42
	vec3 n_out42p0 = Speed;

// Input:44
	float n_out44p0 = TIME;

// TilingAndOffsetUVAnimated:39
	vec3 n_out39p0;
	{
		n_out39p0.xy = n_out39p0.xy + tilingNoffsetAnimatedFunc(n_out40p0.xy, n_out44p0, n_out42p0.xy);
	}

// Input:3
	vec3 n_out3p0 = vec3(UV, 0.0);

// Vector:2
	vec3 n_out2p0 = vec3(0.500000, 0.500000, 0.000000);

// Distance:4
	float n_out4p0 = distance(n_out3p0, n_out2p0);

// ScalarOp:5
	float n_in5p0 = 0.50000;
	float n_out5p0 = step(n_in5p0, n_out4p0);

// ScalarOp:9
	float n_in9p0 = 1.00000;
	float n_out9p0 = n_in9p0 - n_out5p0;

// VectorOp:41
	vec3 n_out41p0 = n_out39p0 * vec3(n_out9p0);

// TextureUniform:47
	vec3 n_out47p0;
	float n_out47p1;
	{
		vec4 n_tex_read = texture(Texture, n_out41p0.xy);
		n_out47p0 = n_tex_read.rgb;
		n_out47p1 = n_tex_read.a;
	}

// ScalarOp:28
	float n_out28p0 = step(n_out49p0, dot(n_out47p0, vec3(0.333333, 0.333333, 0.333333)));

// ScalarUniform:11
	float n_out11p0 = Size_Inner;

// ScalarSmoothStep:6
	float n_in6p1 = 0.50000;
	float n_out6p0 = smoothstep(n_out11p0, n_in6p1, n_out4p0);

// ScalarOp:10
	float n_out10p0 = n_out9p0 * n_out6p0;

// ScalarOp:29
	float n_out29p0 = n_out28p0 * n_out10p0;

// ScalarUniform:12
	float n_out12p0 = Opaticy;

// ScalarOp:13
	float n_out13p0 = n_out29p0 * n_out12p0;

// ScalarOp:17
	float n_in17p0 = 0.50000;
	float n_out17p0 = step(n_in17p0, n_out4p0);

// ScalarOp:19
	float n_in19p0 = 1.00000;
	float n_out19p0 = n_in19p0 - n_out17p0;

// ScalarUniform:21
	float n_out21p0 = Size_Outer;

// ScalarSmoothStep:18
	float n_in18p1 = 0.50000;
	float n_out18p0 = smoothstep(n_out21p0, n_in18p1, n_out4p0);

// ScalarOp:20
	float n_out20p0 = n_out19p0 * n_out18p0;

// Scalar:26
	float n_out26p0 = 0.500000;

// ScalarOp:25
	float n_out25p0 = n_out12p0 + n_out26p0;

// ScalarOp:23
	float n_out23p0 = n_out20p0 * n_out25p0;

// ScalarOp:24
	float n_out24p0 = n_out13p0 + n_out23p0;

// ScalarOp:46
	float n_out46p0 = n_out8p1 * n_out24p0;

// ScalarOp:48
	float n_in48p0 = 1.20000;
	float n_out48p0 = n_in48p0 * n_out46p0;

// Output:0
	
	COLOR.a = n_out48p0;

}"

[sub_resource type="ShaderMaterial" id=33]
shader = SubResource( 34 )
shader_param/Color_Shield = null
shader_param/Step = null
shader_param/Speed = null
shader_param/Size_Inner = null
shader_param/Opaticy = null
shader_param/Size_Outer = null

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 9, 23.25 )

[node name="Player" type="KinematicBody2D"]
light_mask = 3
z_index = 50
collision_layer = 131
script = ExtResource( 1 )
jump_sfx = ExtResource( 8 )
walk_sfx = ExtResource( 11 )
projectile_scene = ExtResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Dead"), NodePath("Jump"), NodePath("Sword"), NodePath("Arrow"), NodePath("Damage") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
state_id = "walk"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
state_id = "jump"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
state_id = "dead"

[node name="Sword" type="Node" parent="StateMachine"]
script = ExtResource( 17 )
state_id = "sword"

[node name="Arrow" type="Node" parent="StateMachine"]
script = ExtResource( 18 )
state_id = "arrow"

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
state_id = "damage"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/arrow = SubResource( 11 )
anims/arrowJump = SubResource( 14 )
anims/axe = SubResource( 12 )
anims/axeJump = SubResource( 25 )
anims/damage = SubResource( 19 )
anims/death = SubResource( 8 )
anims/fall = SubResource( 7 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/protection = SubResource( 21 )
anims/walk = SubResource( 6 )
anims/whitoutArrow = SubResource( 17 )
anims/whitoutArrowJump = SubResource( 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -23 )
shape = SubResource( 1 )

[node name="FloorRaycasts" type="Node2D" parent="."]
visible = false

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
scale = Vector2( 0.2, 0.2 )
cast_to = Vector2( 0, 15 )

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -3, 0 )
scale = Vector2( 0.2, 0.2 )
cast_to = Vector2( -10, 15 )

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 3, 0 )
scale = Vector2( 0.2, 0.2 )
cast_to = Vector2( 10, 15 )

[node name="BodyPivot" type="Node2D" parent="."]

[node name="Particles" type="Position2D" parent="BodyPivot"]
position = Vector2( -6, -3 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="Dash" type="Particles2D" parent="BodyPivot/Particles"]
modulate = Color( 0.788235, 0.611765, 0.611765, 0.537255 )
position = Vector2( -5, -1 )
emitting = false
amount = 3
speed_scale = 1.5
fract_delta = false
process_material = SubResource( 35 )
texture = ExtResource( 2 )

[node name="Hojas" type="CPUParticles2D" parent="BodyPivot/Particles"]
modulate = Color( 0.0745098, 0.662745, 0.541176, 1 )
use_parent_material = true
position = Vector2( -11, -2 )
scale = Vector2( 0.08, 0.08 )
z_index = 10
emitting = false
amount = 9
speed_scale = 2.0
fract_delta = false
draw_order = 1
texture = SubResource( 36 )
emission_shape = 1
emission_sphere_radius = 78.69
direction = Vector2( -20, -20 )
spread = 0.0
gravity = Vector2( -90, -180 )
initial_velocity = 2.0
radial_accel = 95.42
radial_accel_random = 0.53
angle = 383.1
angle_random = 0.84
scale_amount = 0.02
color = Color( 0.207843, 0.392157, 0.443137, 1 )

[node name="Body" type="Sprite" parent="BodyPivot"]
material = SubResource( 31 )
position = Vector2( 2, -46 )
scale = Vector2( 1.57512, 1.51177 )
texture = ExtResource( 19 )
flip_h = true
hframes = 12
vframes = 11

[node name="ObjectCheck" type="RayCast2D" parent="BodyPivot/Body"]
position = Vector2( -0.970535, 14.233 )
rotation = 4.71239
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0.0684128, 15.4614 )

[node name="WeaponPivot" type="Node2D" parent="BodyPivot"]
position = Vector2( -4, -5 )
rotation = -1.29932

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="BodyPivot/WeaponPivot"]
position = Vector2( -0.963374, 0.268157 )
rotation = 0.146083
update_rotation = false
update_scale = false

[node name="WeaponTip" type="Position2D" parent="BodyPivot"]
unique_name_in_owner = true
position = Vector2( 21, -26 )
rotation = -0.0217488

[node name="Sprite" type="Sprite" parent="BodyPivot/WeaponTip"]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="CutArea" type="Area2D" parent="BodyPivot"]
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/CutArea"]
position = Vector2( 23.625, -18 )
shape = SubResource( 18 )
disabled = true

[node name="CutArea2" type="Area2D" parent="BodyPivot"]
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/CutArea2"]
position = Vector2( 20, -16 )
shape = SubResource( 26 )
disabled = true

[node name="ProtectionArea" type="Area2D" parent="BodyPivot"]
collision_layer = 256
collision_mask = 516

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/ProtectionArea"]
position = Vector2( 0, -25 )
shape = SubResource( 22 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="BodyPivot/ProtectionArea"]
visible = false
material = SubResource( 33 )
margin_left = -36.0
margin_top = -61.0
margin_right = 36.0
margin_bottom = 12.0
color = Color( 0, 0.2, 0.321569, 0.54902 )

[node name="Hitbox2" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox2"]
position = Vector2( 0, -24 )
shape = SubResource( 16 )
disabled = true

[node name="PlayerSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="protection_changed" from="." to="StateMachine" method="_on_Player_protection_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine" method="_on_animation_finished"]
[connection signal="body_entered" from="BodyPivot/CutArea" to="." method="_on_CutArea_body_entered"]
[connection signal="body_entered" from="BodyPivot/CutArea2" to="." method="_on_CutArea2_body_entered"]
[connection signal="area_entered" from="Hitbox2" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox2" to="." method="_on_Hitbox_body_entered"]
